Fixing broken drop down menu positioning on mobile

--- a/src/components/Nav.css
+++ b/src/components/Nav.css
@@ -76,7 +76,6 @@
 
 .Nav--GroupLinks {
   position: absolute;
-  top: 100%;
   left: 0;
   width: auto;
   background: white;
